--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="description" content="" />
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%svelte.head%
-	</head>
-	<body>
-		<div>%svelte.body%</div>
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="description" content="" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,700;1,700&family=Source+Sans+Pro:wght@600&display=swap">
+
+	<link rel="icon" href="%svelte.assets%/favicon.png" />
+	<title>Waifuseum Admin</title>
+	%svelte.head%
+</head>
+
+<body>
+	<div>%svelte.body%</div>
+</body>
+
 </html>
