--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,7 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,700;1,700&family=Source+Sans+Pro:wght@600&display=swap">
 
