--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
 	<link rel="stylesheet"
-		href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,700;1,700&family=Source+Sans+Pro:wght@400;600;700&display=swap">
+		href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,500;0,700;1,700&family=Source+Sans+Pro:wght@400;600;700&display=swap">
 
 	<link rel="icon" href="%svelte.assets%/favicon.png" />
 	<title>Waifuseum Admin</title>
